hphp/hack/test/typecheck/namespace_infinite_loop1.php
<?hh
namespace libphonenumber{\/
  class PhoneNumber{

  }
  class PhoneNumberUtil{
    public static function getInstance():PhoneNumber;
    public static function isValidNumber(PhoneNumber):bool
  }
}
